
syntax = "proto3";

package api;

import "google/api/annotations.proto";

option go_package = ".;pb";

// Text data message
message DataText {
  string text = 1;
  string meta = 2;
}

// Card data message
message DataCard {
  string number = 1;
  string meta = 2;
}

// File data message
message DataFile {
  string file = 1;
  string meta = 2;
}


message TextRequest {
  DataText text = 1;
  string token = 2;
}

message TextResponse {
  string id = 1;
  string token = 2;
}

message CardRequest {
  DataCard card = 1;
  string token = 2;
}

message CardResponse { string id = 1; }

message FileInfo {
  string id = 1;
  string type = 2;
}

message FileRequest {
  oneof data {
    FileInfo info = 1;
    bytes chunk_data = 2;
  };
}

message FileResponse {
  string id = 1;
  uint32 size = 2;
}


service UserDataService {
  rpc SaveText(TextRequest) returns (TextResponse) {
    option (google.api.http) = {
      post : "/v1/user_data/save_text"
      body : "*"
    };
  };

  rpc SaveCard(CardRequest) returns (CardResponse) {
    option (google.api.http) = {
      post : "/v1/user_data/save_card"
      body : "*"
    };
  };

  rpc SaveFile(stream FileRequest) returns (FileResponse) {
    option (google.api.http) = {
      post : "/v1/user_data/upload_file"
      body : "*"
    };
  };
}